--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,9 @@
 version: "3.7"
 
 services:
-    # nginx:
-    #     build: ./docker/nginx
-    #     container_name: "nginx"
-    #     ports:
-    #         - "80:80"
-    #         - "443:443"
-    #     volumes:
-    #         - /run/media/diogo/7f7a95bf-488d-465a-b304-8a0ee92a3558/workspace:/app
-    #     networks:
-    #         - lea-network
-    # php:
-    #     build: ./docker/php
-    #     container_name: "php"
-    #     volumes:
-    #         - /run/media/diogo/7f7a95bf-488d-465a-b304-8a0ee92a3558/workspace:/app
-    #     networks:
-    #         - lea-network
     database:
         image: mysql:8.0.32
-        container_name: "primary"
+        container_name: "database"
         ports:
             - "3306:3306"
         volumes:
@@ -31,13 +14,13 @@ services:
             MYSQL_DATABASE: lea
         networks:
             - lea-network
-    # cache:
-    #     build: ./docker/redis
-    #     container_name: "cache"
-    #     ports:
-    #         - "6379:6379"
-    #     networks:
-    #         - lea-network
+    cache:
+        build: ./docker/redis
+        container_name: "cache"
+        ports:
+            - "6379:6379"
+        networks:
+            - lea-network
 networks:
     lea-network:
         name: lea-network
