--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,59 @@
-version: "3.7"
+version: "3.8"
 
 services:
-    database:
-        image: mysql:8.0.32
-        container_name: "database"
+    sanic:
+        build: .
+        container_name: "sanic"
         ports:
-            - "3306:3306"
-        volumes:
-            - /var/lib/mysql
-        environment:
-            MYSQL_ROOT_PASSWORD: "root"
-            MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-            MYSQL_DATABASE: lea
+            - "8000:8000"
+        depends_on:
+            postgres:
+                condition: service_healthy
+            redis:
+                condition: service_healthy
         networks:
             - lea-network
-    cache:
+        restart: always
+    nginx:
+        image: nginx:1.23.3-alpine
+        container_name: "nginx"
+        ports:
+            - "80:80"
+        depends_on:
+            - sanic
+        volumes:
+            - ./docker/nginx/templates/sanic.conf:/etc/nginx/conf.d/default.conf
+        networks:
+            - lea-network
+        restart: always
+    postgres:
+        image: postgres:15.1-alpine
+        container_name: "postgres"
+        ports:
+            - "5432:5432"
+        volumes:
+            - /var/lib/postgresql/data
+        environment:
+            POSTGRES_USER: "root"
+            POSTGRES_PASSWORD: "root"
+            POSTGRES_DB: lea
+        healthcheck:
+            test: [ "CMD", "pg_isready", "-q", "-d", "lea", "-U", "root" ]
+            timeout: 45s
+            interval: 10s
+            retries: 10
+        networks:
+            - lea-network
+    redis:
         build: ./docker/redis
-        container_name: "cache"
+        container_name: "redis"
         ports:
             - "6379:6379"
+        healthcheck:
+            test: ["CMD", "redis-cli", "ping"]
+            interval: 1s
+            timeout: 3s
+            retries: 30
         networks:
             - lea-network
 networks:
