--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,5 @@ setuptools==67.0.0
 sanic==22.12.0
 sanic-ext==22.12.0
 tortoise-orm==0.19.3
-# asyncmy==0.2.5
-aiomysql==0.1.1
+redis==4.4.2
 asyncpg==0.27.0
